--- a/app/partials/phone-list.html
+++ b/app/partials/phone-list.html
@@ -1,28 +1,21 @@
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-md-2">
-      <!--Sidebar content-->
-
-      Search: <input ng-model="query">
-      Sort by:
-      <select ng-model="orderProp">
-        <option value="name">Alphabetical</option>
-        <option value="age">Newest</option>
-      </select>
-
-    </div>
-    <div class="col-md-10">
-      <!--Body content-->
-
-      <ul class="phones">
-        <li ng-repeat="phone in phones | filter:query | orderBy:orderProp"
-            class="thumbnail phone-listing">
-          <a href="#/phones/{{phone.id}}" class="thumb"><img ng-src="{{phone.imageUrl}}" alt="{{phone.name}}"></a>
-          <a href="#/phones/{{phone.id}}">{{phone.name}}</a>
-          <p>{{phone.snippet}}</p>
-        </li>
-      </ul>
-
-    </div>
-  </div>
+<div class="form-group">
+  <label for="query">Search: </label>
+  <input ng-model="query" id="query" class="form-control">
+</div>
+<div class="form-group">
+  <label for="order">Sort by:</label>
+  <select ng-model="orderProp" id="order" class="form-control">
+    <option value="name">Alphabetical</option>
+    <option value="age">Newest</option>
+  </select>
+</div>
+<div class="col-md-10 col-md-offset-2">
+  <ul class="phones">
+    <li ng-repeat="phone in phones | filter:query | orderBy:orderProp"
+        class="thumbnail phone-listing">
+      <a href="#/phones/{{phone.id}}" class="thumb"><img ng-src="{{phone.imageUrl}}" alt="{{phone.name}}"></a>
+      <a href="#/phones/{{phone.id}}">{{phone.name}}</a>
+      <p>{{phone.snippet}}</p>
+    </li>
+  </ul>
 </div>
