--- a/partials/phone-list.html
+++ b/partials/phone-list.html
@@ -1,15 +1,14 @@
-<div class="form-group">
-  <label for="query">Search: </label>
-  <input ng-model="query" id="query" class="form-control">
+<div class="col-xs-6">
+  Search: <input ng-model="query">
 </div>
-<div class="form-group">
-  <label for="order">Sort by:</label>
-  <select ng-model="orderProp" id="order" class="form-control">
+<div class="col-xs-6">
+  Sort by:
+  <select ng-model="orderProp">
     <option value="name">Alphabetical</option>
     <option value="age">Newest</option>
   </select>
 </div>
-<div class="col-md-10 col-md-offset-2">
+<div class="col-xs-10 col-xs-offset-1">
   <ul class="phones">
     <li ng-repeat="phone in phones | filter:query | orderBy:orderProp"
         class="thumbnail phone-listing">
