--- a/partials/phone-list.html
+++ b/partials/phone-list.html
@@ -1,20 +1,24 @@
-<div class="col-xs-6">
-  Search: <input ng-model="query">
+<div class="row">
+  <div class="col-xs-6">
+    Search: <input ng-model="query">
+  </div>
+  <div class="col-xs-6">
+    Sort by:
+    <select ng-model="orderProp">
+      <option value="name">Alphabetical</option>
+      <option value="age">Newest</option>
+    </select>
+  </div>
 </div>
-<div class="col-xs-6">
-  Sort by:
-  <select ng-model="orderProp">
-    <option value="name">Alphabetical</option>
-    <option value="age">Newest</option>
-  </select>
-</div>
-<div class="col-xs-10 col-xs-offset-1">
-  <ul class="phones">
-    <li ng-repeat="phone in phones | filter:query | orderBy:orderProp"
-        class="thumbnail phone-listing">
-      <a href="#/phones/{{phone.id}}" class="thumb"><img ng-src="{{phone.imageUrl}}" alt="{{phone.name}}"></a>
-      <a href="#/phones/{{phone.id}}">{{phone.name}}</a>
-      <p>{{phone.snippet}}</p>
-    </li>
-  </ul>
+<div class="row">
+  <div class="col-xs-10 col-xs-offset-1">
+    <ul class="phones">
+      <li ng-repeat="phone in phones | filter:query | orderBy:orderProp"
+          class="thumbnail phone-listing">
+        <a href="#/phones/{{phone.id}}" class="thumb"><img ng-src="{{phone.imageUrl}}" alt="{{phone.name}}"></a>
+        <a href="#/phones/{{phone.id}}">{{phone.name}}</a>
+        <p>{{phone.snippet}}</p>
+      </li>
+    </ul>
+  </div>
 </div>
